Add notebooks to run analysis

--- a/1-Expression-VIP.ipynb
+++ b/1-Expression-VIP.ipynb
@@ -25,7 +25,7 @@
     "from plotly.subplots import make_subplots\n",
     "from plotly import express as px\n",
     "import plotly.io as pio\n",
-    "pio.renderers.default = \"png\" # Set to \"svg\" or \"png\" for non-interactive plots\n",
+    "pio.renderers.default = \"notebook_connected\" # Set to \"svg\" or \"png\" for non-interactive plots\n",
     "\n",
     "import correlations as corr\n",
     "import mvip"
@@ -675,7 +675,7 @@
     }
    ],
    "source": [
-    "images_dir = 'output/images/expression/'\n",
+    "images_dir = 'outputs/images/expression/'\n",
     "os.makedirs(images_dir, exist_ok=True)\n",
     "mvip_test = mvip.Morphology_VIP_CNN_Features(expression, \n",
     "                                corr_matrix, \n",
@@ -689,7 +689,7 @@
     "results = mvip_test.test_allele_set(alleles, create_images=True, null_distribution=null_treatments,\n",
     "                                    images_dir=images_dir)\n",
     "results = mvip_test.adjust_pvalues(results)\n",
-    "results.to_csv(\"output/benchmark_results_expression.csv\", index=False)\n",
+    "results.to_csv(\"outputs/benchmark_results_expression.csv\", index=False)\n",
     "results"
    ]
   },
@@ -713,7 +713,7 @@
     "    median = corr.median_correlation(expression[index].index, corr_matrix)\n",
     "    signal_strength[trt] = float(median)\n",
     "\n",
-    "with open('output/signal_strength_l1k.json', 'w') as fp:\n",
+    "with open('outputs/signal_strength_l1k.json', 'w') as fp:\n",
     "    json.dump(signal_strength, fp)"
    ]
   }
