Add qc_status filter and metadata files

--- a/2-Cell-Morphology-VIP.ipynb
+++ b/2-Cell-Morphology-VIP.ipynb
@@ -47,14 +47,34 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0b653310",
+   "id": "6ad3bc84",
    "metadata": {},
    "outputs": [],
    "source": [
     "platemaps = pd.read_csv('inputs/metadata/cytodata/barcode_platemap.csv')\n",
     "pmaps = pd.concat([pd.read_csv('inputs/metadata/cytodata/platemap/DOC45.46.47.48.txt', sep='\\t'),\n",
     "                   pd.read_csv('inputs/metadata/cytodata/platemap/DOC49.50.51.52.txt', sep='\\t')],\n",
-    "                 )\n",
+    "                 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0836d87b",
+   "metadata": {},
+   "source": [
+    "### Filter quality control status\n",
+    "\n",
+    "All of our TP53 alleles (including our allele annotated as \"wt\") actually harbor an inactivating p53 variant. Thus, we flagged such alleles(`qc_status=False`) and discarded them in this analysis because they are not valid REFERENCES for the cmVIP framework."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "de22d55e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmaps = pmaps[pmaps.qc_status]\n",
     "metadata = pmaps.merge(platemaps, how='inner', left_on='VirusPlateName', right_on='Plate_Map_Name')"
    ]
   },
@@ -68,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b2d647c0",
    "metadata": {},
    "outputs": [],
@@ -87,50 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9b557e43",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "trt        5312\n",
-       "control     320\n",
-       "Name: Metadata_broad_sample_type, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "morphology = metadata[['Assay_Plate_Barcode', 'well_position', 'broad_sample', 'pert_type', 'x_mutation_status']].copy()\n",
-    "morphology.columns = ['Metadata_Plate', 'Metadata_Well', 'Metadata_broad_sample', 'pert_type', 'x_mutation_status']\n",
-    "control_def = 'EMPTY'\n",
-    "if control_def == 'EMPTY':\n",
-    "    morphology = morphology[morphology.pert_type!='ctl_vector'].copy()\n",
-    "    morphology['Metadata_broad_sample_type'] = morphology.pert_type.apply(lambda x: 'control' if x == 'EMPTY' else 'trt')\n",
-    "elif control_def == 'NOT_TREATMENT':\n",
-    "    morphology['Metadata_broad_sample_type'] = morphology.pert_type.apply(lambda x: 'control' if x != 'trt_oe' else 'trt')\n",
-    "elif control_def == 'CTL_VECTOR':\n",
-    "    morphology = morphology[morphology.pert_type!='EMPTY'].copy()\n",
-    "    morphology['Metadata_broad_sample_type'] = morphology.pert_type.apply(lambda x: 'control' if x == 'ctl_vector' else 'trt')\n",
-    "morphology['Metadata_broad_sample_type'].value_counts(dropna=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "09b9d2e6",
-   "metadata": {},
-   "source": [
-    "## Drop `TP53`"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "3c658b8d",
+   "id": "9b557e43",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +125,17 @@
     }
    ],
    "source": [
-    "morphology = morphology[~morphology.x_mutation_status.str.contains('TP53')].copy()\n",
+    "morphology = metadata[['Assay_Plate_Barcode', 'well_position', 'broad_sample', 'pert_type', 'x_mutation_status']].copy()\n",
+    "morphology.columns = ['Metadata_Plate', 'Metadata_Well', 'Metadata_broad_sample', 'pert_type', 'x_mutation_status']\n",
+    "control_def = 'EMPTY'\n",
+    "if control_def == 'EMPTY':\n",
+    "    morphology = morphology[morphology.pert_type!='ctl_vector'].copy()\n",
+    "    morphology['Metadata_broad_sample_type'] = morphology.pert_type.apply(lambda x: 'control' if x == 'EMPTY' else 'trt')\n",
+    "elif control_def == 'NOT_TREATMENT':\n",
+    "    morphology['Metadata_broad_sample_type'] = morphology.pert_type.apply(lambda x: 'control' if x != 'trt_oe' else 'trt')\n",
+    "elif control_def == 'CTL_VECTOR':\n",
+    "    morphology = morphology[morphology.pert_type!='EMPTY'].copy()\n",
+    "    morphology['Metadata_broad_sample_type'] = morphology.pert_type.apply(lambda x: 'control' if x == 'ctl_vector' else 'trt')\n",
     "morphology['Metadata_broad_sample_type'].value_counts(dropna=False)"
    ]
   },
@@ -1857,7 +1845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
