--- a/2-Cell-Morphology-VIP.ipynb
+++ b/2-Cell-Morphology-VIP.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "### Filter quality control status\n",
     "\n",
-    "All of our TP53 alleles (including our allele annotated as \"wt\") actually harbor an inactivating p53 variant. Thus, we flagged such alleles(`qc_status=False`) and discarded them in this analysis because they are not valid REFERENCES for the cmVIP framework."
+    "All of our TP53 alleles (including our allele annotated as \"wt\") actually harbor an inactivating p53 variant. Thus, we flagged such alleles (`qc_status=False`) and discarded them in this analysis because they are wrong perturbations for the purposes of this study."
    ]
   },
   {
