Single-cell analysis running

--- a/5-single-cell-graph-analysis.ipynb
+++ b/5-single-cell-graph-analysis.ipynb
@@ -169,15 +169,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "595@CCND1_WT.c\n",
-      "595@CCND1_p.E172K 0.2674470457079153\n"
+      "5268@SERPINB5_WT.c\n",
+      "5268@SERPINB5_p.D141A 0.18227179336659818\n",
+      "5268@SERPINB5_p.A7T 0.08137638617090671\n",
+      "5268@SERPINB5_p.A42F 0.12837331334332833\n",
+      "5268@SERPINB5_p.T37I 0.09465459065885277\n",
+      "5268@SERPINB5_p.I159S 0.11857142857142858\n",
+      "5268@SERPINB5_p.G142V 0.10231923601637108\n",
+      "5268@SERPINB5_WT.o 0.15433314575126617\n",
+      "5268@SERPINB5_p.A165T 0.1598007281088331\n",
+      "231@AKR1B1_WT.c\n",
+      "231@AKR1B1_p.F252L 0.09147982062780269\n",
+      "231@AKR1B1_WT.o 0.26762995274445656\n",
+      "231@AKR1B1_p.P14R 0.22262959568184132\n",
+      "231@AKR1B1_p.Q27K 0.10024475896562733\n",
+      "673@BRAF_WT.c\n",
+      "673@BRAF_p.G466A 0.7279312343055824\n",
+      "673@BRAF_p.A762E 0.5322080974254887\n",
+      "673@BRAF_p.H574N 0.6151975683890577\n",
+      "673@BRAF_p.G469S 0.9418748219204103\n",
+      "673@BRAF_p.W450L 0.6249187432286024\n",
+      "673@BRAF_p.R682W 0.43767672007540054\n",
+      "673@BRAF_p.D594H 0.3943522417636859\n",
+      "673@BRAF_p.N581S 0.7276067527308838\n",
+      "673@BRAF_p.K601N 0.9469812762705387\n",
+      "673@BRAF_p.L485S 0.9084167593622544\n",
+      "673@BRAF_p.G469V 0.7085048699668641\n",
+      "673@BRAF_p.V600E 0.9451508825204024\n",
+      "673@BRAF_p.G466V 0.4063754427390791\n",
+      "673@BRAF_p.G466E 0.32847682119205296\n",
+      "673@BRAF_p.L613F 0.5117647058823529\n",
+      "673@BRAF_p.H574Q 0.8805013665064556\n",
+      "673@BRAF_p.P367R 0.7574375247917493\n",
+      "8503@PIK3R3_WT.c\n",
+      "8503@PIK3R3_p.R245C 0.08379189594797398\n",
+      "8503@PIK3R3_p.F380L 0.1491049415800193\n",
+      "8503@PIK3R3_p.M295T 0.10159549507273581\n",
+      "8503@PIK3R3_WT.o 0.10606784519827998\n",
+      "8503@PIK3R3_p.S408R 0.10461538461538461\n",
+      "8503@PIK3R3_p.P127L 0.16868798235942667\n",
+      "23457@ABCB9_WT.c\n",
+      "23457@ABCB9_p.G443C 0.3732564841498559\n",
+      "23457@ABCB9_p.V140M 0.23699498283601797\n",
+      "23457@ABCB9_WT.o 0.19313413858868406\n",
+      "23457@ABCB9_p.R281L 0.1713592886972922\n",
+      "3418@IDH2_WT.c\n",
+      "3418@IDH2_p.K130del 0.3090111642743222\n",
+      "3418@IDH2_p.S249G 0.13314489735197857\n",
+      "3418@IDH2_WT.o 0.29468678255165626\n",
+      "3418@IDH2_p.R188W 0.17951560634487465\n",
+      "10227@MFSD10_WT.c\n",
+      "6794@STK11_WT.c\n",
+      "6794@STK11_p.D194Y 0.15945079174183202\n",
+      "6794@STK11_p.N181I 0.2198300283286119\n",
+      "6794@STK11_p.K78E 0.35860949288511124\n",
+      "6794@STK11_p.H168R 0.20604117448531895\n",
+      "6794@STK11_p.P221L 0.15626118067978534\n",
+      "6794@STK11_p.G251V 0.10852283231650953\n",
+      "6794@STK11_p.D176H 0.20384805130735076\n",
+      "6794@STK11_p.W239C 0.1478402734617775\n",
+      "6794@STK11_p.N181Y 0.20989845213447697\n",
+      "6794@STK11_WT.o 0.16824557538371154\n",
+      "6794@STK11_p.S216F 0.15727153122153628\n",
+      "6794@STK11_p.D176A 0.13217768147345613\n",
+      "6794@STK11_p.L245F 0.1490439186239413\n",
+      "6794@STK11_p.G251F 0.1378534125697821\n",
+      "6794@STK11_p.G56W 0.23405823811279028\n",
+      "6794@STK11_p.G56V 0.13149143003325658\n",
+      "6794@STK11_p.D194Y.unin.fs 0.13006530101082386\n"
      ]
     }
    ],
